updating weekly blog posts

--- a/HTML/Blogs/b3.html
+++ b/HTML/Blogs/b3.html
@@ -28,7 +28,27 @@
         <h1>BLOG POST 3:Interaction design...ooouuu</h1>
 
         <article>
-            
+            <p> Interaction design appears as a guiding light in the broad digital realm where consumers are inundated with options, influencing how we interact, connect, and navigate with technology. 
+                Our digital journey is orchestrated by interaction design, which skillfully combines aesthetics and functionality to produce meaningful user experiences with every touch of a mouse or swipe of a finger.</p>
+
+<p>At its core, interaction design is about empathy: knowing users' requirements wants, and behaviours in order to create user interfaces that are simple to use and feel natural. 
+    Every encounter between a human and a machine is carefully designed to provoke happiness and contentment.<p>
+
+        <p>Beyond the screen, interaction design encompasses all of the user's journey's touchpoints. 
+           Whether creating a website, a smartphone application, or a tangible device, designers have to take into account how people will engage with the technology in different settings and scenarios. 
+           This necessitates a comprehensive strategy that considers the complete user experience, from initial exploration to sustained involvement.</p>
+
+<p>For my website, I want to focus on my interaction design to highlight my skill of being a UI/UX designer. 
+    I want the user to gather that information from the meaningful interactions, the look and feel. 
+    I want to do more showing rather than telling. The interactions I want to have on my website include making use of buttons, onlick functions for text where applicable, making use of scrolling and eventually adjusting the screen once I’ve worked on responsive design.</p>
+
+<p>With technology developing at a quick rate designers need to adjust to new technologies being developed and adapt their design methods to allow for good user experiences and enhanced user interfaces. 
+   For my website I will be testing and making iterations as I try to figure out what kind of experience I would like to create, and further explore what interactions I would like to have in my website.</p>
+
+<p> In summary, interaction design is a discipline that combines the arts and sciences to provide entertaining and useful digital experiences by fusing creativity and usability.
+    Designers may produce interfaces that not only satisfy users' demands but also go above and beyond their expectations by centering the user's experience in the process.
+    And in doing so, they have the ability to change how we engage with technology, influencing a more promising and interconnected future. <p>
+
         </article>
 
         </body>
