--- a/HTML/Blogs/b6.html
+++ b/HTML/Blogs/b6.html
@@ -47,7 +47,16 @@
     However, these algorithms are not immune to prejudice, and they reflect the biases in the data used to train them. 
     Biased algorithms prolong or exacerbate existing inequities and injustice, posing ethical concerns.
     Software engineers are responsible for addressing prejudice in algorithmic systems through techniques such as bias detection, data pretreatment, and algorithmic fairness measures.</p>
-
+    
+    <strong><p>Security vs Accessiblity:</p><strong>
+         <p>Software engineers also have to weigh the ethical considerations of accessibility vs security.
+            For users with limited resources or disabilities, accessibility may suffer as a result of enhanced security measures, which can safeguard users' data and privacy.
+            On the other hand, giving accessibility first priority could unintentionally undermine security protocols, making systems more susceptible to hacking and security breaches. 
+            By putting strong security measures in place and making sure that software is still usable by everyone, including people with impairments, software engineers must find a balance between security and accessibility.</p>
+        
+            <p>In conclusion, ethical dilemmas arise frequently in software engineering and call for thoughtful deliberation and moral judgment. 
+                Software engineers may overcome these problems and aid in the creation of technology that advances society at large by giving ethical concepts like privacy, justice, openness, and accessibility top priority. 
+                Adopting ethical principles promotes trust and confidence in the systems and products that software engineering experts develop, as well as their reputation and credibility.</p>
         </article>
 
         </body>
