--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -29,7 +29,10 @@
         <p>
     Blog posts for the website will go here and stuff.
     make sure to like wirte a bunch of stuff and words blah blah blah.
+    I pretty much do more research and write whatever comes to mind and what I think and learn...I promise I do my readings i dont always quote them
         </p>
+        
+        <p> *Insert crying emoji*</p>
      
         <nav id="menu">
 
