--- a/HTML/Blogs/b2.html
+++ b/HTML/Blogs/b2.html
@@ -29,6 +29,8 @@
              What I'd like to do is place all my HTML pages in one folder, the same goes for my JS and CSS folders as well as the images I will be using.
               Not only will this make it easier to find the files I'm looking for, but it will also make my project file look neater and readable.</p>
 
+              <h4>Folder structure:</h4>
+              <img src="../IMGS/Folderstructure.png" alt= "Insp 1 Screenshot" width="800" height="500">
             <p>The reading for the week was ‘You Say You Want a Revolution? Hypertext and the Laws of Media’ by Moulthrop. In this reading, we further explore the idea of hypertext and the Laws of Media. 
                 A line that stood out for me was “Hypertext is all about connection, linkage, and affiliation.” (Moulthrop, 2003. P. 7).
                  I agree with this statement as hypertext has made it easier to not only in some way store information, but it has made it easier to link information relating to what is being presented, hypertext has allowed us to in a way cross-reference between materials presented in technology.
