update blog post 6

--- a/HTML/Blogs/b6.html
+++ b/HTML/Blogs/b6.html
@@ -48,7 +48,7 @@
     Biased algorithms prolong or exacerbate existing inequities and injustice, posing ethical concerns.
     Software engineers are responsible for addressing prejudice in algorithmic systems through techniques such as bias detection, data pretreatment, and algorithmic fairness measures.</p>
     
-    <strong><p>Security vs Accessiblity:</p><strong>
+    <strong><p>Security vs Accessiblity:</p></strong>
          <p>Software engineers also have to weigh the ethical considerations of accessibility vs security.
             For users with limited resources or disabilities, accessibility may suffer as a result of enhanced security measures, which can safeguard users' data and privacy.
             On the other hand, giving accessibility first priority could unintentionally undermine security protocols, making systems more susceptible to hacking and security breaches. 
