update blog post 8

--- a/HTML/Blogs/b8.html
+++ b/HTML/Blogs/b8.html
@@ -32,12 +32,12 @@
                 There is a rare chance to rethink digital environments via a feminist lens in Africa, where internet penetration is increasing steadily. 
                 This blog examines the role that feminism and African feminists have in fostering an online community that is more equal, inclusive, and empowering.</p>
 
-<strong><p>The Power of Connectivity:</p><strong>
+<strong><p>The Power of Connectivity:</p></strong>
 <p>The internet has become into a vital resource for activism, business, education, and communication. 
     The internet offers a platform for unmatched connectivity and expression for women in Africa, a continent where traditional channels for their voices to be heard have frequently been restricted.
      African feminists have discovered places to express their stories, raise awareness of issues, and organize for change through blogs, podcasts, social media, and online forums.</p>
 
-<strong><p>Challenges and Opportunities:</p><strong>
+<strong><p>Challenges and Opportunities:</p></strong>
 <p>But there are drawbacks to the digital world as well. 
     Cyberbullying, online harassment, and gender-based violence are widespread problems that disproportionately impact women and girls.
      Online platforms frequently mirror and support current power systems and inequalities restricting the voices of the oppressed and encouraging negative stereotypes. 
@@ -45,7 +45,7 @@
 African feminists are actively attempting to reclaim digital spaces and transform them into settings that are more inclusive and empowering in spite of these obstacles.
  African feminists are making significant strides in the digital arena by establishing their own platforms, opposing damaging myths, and pushing for laws that support online safety. </p>
 
-<strong><p>The Need for African Feminist Perspectives:</p><strong>
+<strong><p>The Need for African Feminist Perspectives:</p></strong>
     <p>African viewpoints on feminism and the internet are frequently disregarded or neglected in the global discourse.
          However, African feminists challenge prevailing narratives and deepen the conversation with their distinct perspectives and experiences. 
          We can build a more diverse and inclusive feminist internet that represents the variety of the continent by elevating African perspectives and experiences.</p>
