--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <!--CSS referecnes-->
 
-    <link rel="stylesheet" href="../CSS/normalize.css" />
-    <link rel="stylesheet" href="../CSS/home.css" />
+    <link rel="stylesheet" href="./CSS/normalize.css" />
+    <link rel="stylesheet" href="./CSS/home.css" />
 
     <!--JS reference-->
 
