updating home page css

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </p>
     </div>
 
-        <img src="IMGS/Girlcode.gif" alt="Girl coding" width="300" height="400">
+        <img src="https://i.pinimg.com/564x/52/e9/61/52e961b282220dc1ee18e3acbe23f4bd.jpg" alt="Girl coding" width="300" height="400">
     
             
         <footer>
