--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <script type="module"> import { initialise } from "./JS/menu.js"
         initialise("Home") </script>
+                        <script src="typewriter.js"></script>
 
 </head>
 
@@ -38,11 +39,14 @@
         <h1>FEFE'S PORTFOLIO WEBSITE</h1>
 
         <div class="description">
-        <p>
-            Welcome to my website and stuff yeah im not the coolest person, but hopefully you like this skeleton of a website. 
-            
-        </p>
+
+            <div id="typedtext">
+                <script src="typewriter.js"></script>
+            </div>
     </div>
+
+   
+
 
         <img src="https://i.pinimg.com/564x/52/e9/61/52e961b282220dc1ee18e3acbe23f4bd.jpg" alt="Girl coding" width="300" height="400">
     
