home page css update

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script type="module"> import { initialise } from "./JS/menu.js"
         initialise("Home") </script>
 
+        <!--Adding reference for icons fron Font Awesome-->
+        <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -48,10 +50,14 @@
 
         </div>
 
-        <footer>
-            <h4>Lets Talk:</h4>
-            <p>blavh labah blah</p>
-        </footer>
+        <!--A fixed footer-->
+
+        <div class="footer">
+            <p>Let's keep in touch:</p>
+            <button class="btn"><i class="fa-regular fa-envelope"></i></button>
+            <button class="btn"><i class="fa-brands fa-github"></i></button>
+            <button class="btn"><i class="fa-brands fa-linkedin"></i></button>
+          </div>
     
    
 </body>
