adding the script references to each page

--- a/HTML/Blogs/b4.html
+++ b/HTML/Blogs/b4.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Post 4</title>
 
-    
+    <!--CSS refrences-->
+    <link rel="stylesheet" href="../CSS/normalize.css" />
+    <link rel="stylesheet" href="../CSS/styling.css" />
+
+    <!--JS references-->
     <script type="module">
         import { initialise } from "../../JS/menu.js"
         initialise("Blog");
