--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -8,6 +8,12 @@
     <meta name="author" content="Ofentse Magabeane">
     <title>Blog</title>
 
+    <!--CSS refrences-->
+    <link rel="stylesheet" href="../CSS/normalize.css" />
+    <link rel="stylesheet" href="../CSS/styling.css" />
+
+    <!--JS references-->
+
     <script type="module"> import { initialise } from "../JS/menu.js"
         initialise("Blog") </script>
 
