--- a/HTML/design.html
+++ b/HTML/design.html
@@ -8,6 +8,12 @@
     <meta name="author" content="Ofentse Magabeane">
     <title>Design</title>
 
+    <!--CSS refrences-->
+    <link rel="stylesheet" href="../CSS/normalize.css" />
+    <link rel="stylesheet" href="../CSS/styling.css" />
+
+
+<!--JS refrences-->
     <script type="module">
         import { initialise } from "../JS/menu.js"
         initialise("Design");
