--- a/HTML/essays.html
+++ b/HTML/essays.html
@@ -8,8 +8,15 @@
     <meta name="author" content="Ofentse Magabeane">
     <title>Essays</title>
 
+    <!--CSS refrences-->
+    <link rel="stylesheet" href="../CSS/normalize.css" />
+    <link rel="stylesheet" href="../CSS/styling.css" />
+
+    <!--JS references-->
+
     <script type="module"> import { initialise } from "../JS/menu.js"
         initialise("Essays") </script>
+        
 </head>
 
 <header>
