--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -9,6 +9,10 @@
 
     <title>Profile</title>
 
+    <!--CSS refrences-->
+    <link rel="stylesheet" href="../CSS/normalize.css" />
+    <link rel="stylesheet" href="../CSS/styling.css" />
+
     <!--The 'script ref is for the navigation'-->
     <script type="module">
         import { initialise } from "../JS/menu.js"
