updating code for script reference- blogs

--- a/HTML/Blogs/b3.html
+++ b/HTML/Blogs/b3.html
@@ -7,8 +7,8 @@
     <title>Blog Post 3</title>
 
     <!--CSS refrences-->
-    <link rel="stylesheet" href="../CSS/normalize.css" />
-    <link rel="stylesheet" href="../CSS/styling.css" />
+    <link rel="stylesheet" href=".../CSS/normalize.css" />
+    <link rel="stylesheet" href=".../CSS/styling.css" />
     
     <!--JS references-->
     <script type="module">
