--- a/HTML/Blogs/b7.html
+++ b/HTML/Blogs/b7.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Post 7</title>
 
-    <!--CSS refrences-->
-    <link rel="stylesheet" href=".../CSS/normalize.css" />
-    <link rel="stylesheet" href=".../CSS/styling.css" />
+     <!--CSS refrences-->
+     <link rel="stylesheet" href="../../CSS/normalize.css" />
+     <link rel="stylesheet" href="../../CSS/styling.css" />
 
     <!--JS references-->
     <script type="module">
