--- a/HTML/essays.html
+++ b/HTML/essays.html
@@ -16,7 +16,7 @@
 
     <script type="module"> import { initialise } from "../JS/menu.js"
         initialise("Essays") </script>
-        
+
 </head>
 
 <header>
@@ -77,13 +77,14 @@ As the tech space continues to grow and design methods adapt to the change, we s
 
 </article>
 
-<footer>
-    <p> Contact me:</p>
-    <p>Phone number: xxxxxxx</p>
-     <p> Github: Fefeswork</p>
-     <p> Linkdin: Ofentse Magabeane</p>
-     <p>Email: ofentse.magabeane@gmail.com</p>
- </footer>
+<!--A fixed footer-->
+
+<div class="footer">
+    <p>Let's keep in touch:</p>
+    <button class="btn"><i class="fa-regular fa-envelope"></i></button>
+    <button class="btn"><i class="fa-brands fa-github"></i></button>
+    <button class="btn"><i class="fa-brands fa-linkedin"></i></button>
+  </div>
 
 </body>
 </html>
