--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -39,13 +39,13 @@
         width="500" height="500" id="imgClickAndChange" onclick="changeImage()"/>
     </p>
 
-    <footer>
-        <p> Contact me:</p>
-        <p>Phone number: xxxxxxx</p>
-         <p> Github: Fefeswork</p>
-         <p> Linkdin: Ofentse Magabeane</p>
-         <p>Email: ofentse.magabeane@gmail.com</p>
-     </footer>
-     
+    <!--A fixed footer-->
+
+    <div class="footer">
+        <p>Let's keep in touch:</p>
+        <button class="btn"><i class="fa-regular fa-envelope"></i></button>
+        <button class="btn"><i class="fa-brands fa-github"></i></button>
+        <button class="btn"><i class="fa-brands fa-linkedin"></i></button>
+      </div>
 </body>
 </html>
