--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -56,14 +56,15 @@
 
     </section>
 
-    <br>
-    <footer>
-        <p> Contact me:</p>
-        <p>Phone number: xxxxxxx</p>
-         <p> Github: Fefeswork</p>
-         <p> Linkdin: Ofentse Magabeane</p>
-         <p>Email: ofentse.magabeane@gmail.com</p>
-     </footer>
+    
+<!--A fixed footer-->
+
+<div class="footer">
+    <p>Let's keep in touch:</p>
+    <button class="btn"><i class="fa-regular fa-envelope"></i></button>
+    <button class="btn"><i class="fa-brands fa-github"></i></button>
+    <button class="btn"><i class="fa-brands fa-linkedin"></i></button>
+  </div>
 
 
     <!--The 'script' ref is to refeernce the dun dact generator-->
