--- a/HTML/design.html
+++ b/HTML/design.html
@@ -23,6 +23,9 @@
 <script type="text/javascript" src="../../../JS/Flipbook/extras/modernizr.2.5.3.min.js"></script>
 <script type="text/javascript" src="../../../JS/Flipbook/flipbook.js"></script>
 
+<!--Adding reference for icons fron Font Awesome-->
+<script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -40,7 +43,7 @@
         <div class="flipbook-viewport">
             <div class="container">
                 <div class="flipbook">
-                    <div style="background-image:url(../IMGS/girl.jpg)"width="40" height="30"></div>
+                    <div style="background-image:url(../IMGS/girl.jpg)"></div>
                     <div style="background-image:url(../IMGS/Colour1.png)"></div>
                     <div style="background-image:url(../IMGS/Colour2.png)"></div>
                     <div style="background-image:url(../basic/pages/4.jpg)"></div>
