--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -20,6 +20,9 @@
 
         <script src="../JS/onclick.js"></script>
 
+        <!--Adding reference for icons fron Font Awesome-->
+        <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header>
