--- a/HTML/essays.html
+++ b/HTML/essays.html
@@ -17,6 +17,9 @@
     <script type="module"> import { initialise } from "../JS/menu.js"
         initialise("Essays") </script>
 
+        <!--Adding reference for icons fron Font Awesome-->
+        <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
+
 </head>
 
 <header>
