--- a/HTML/profile.html
+++ b/HTML/profile.html
@@ -19,6 +19,8 @@
         initialise("Profile");
         </script>
 
+<!--Adding reference for icons fron Font Awesome-->
+<script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
         
 </head>
 <body>
