updating flipbook css

--- a/HTML/design.html
+++ b/HTML/design.html
@@ -11,6 +11,7 @@
     <!--CSS refrences-->
     <link rel="stylesheet" href="../CSS/normalize.css" />
     <link rel="stylesheet" href="../CSS/styling.css" />
+    <link rel="stylesheet" href="../CSS/design.css" />
 
 
 <!--JS refrences-->
