flipbook images testing
testing to see if the flipbook appears- it only appears in the Live server

--- a/HTML/design.html
+++ b/HTML/design.html
@@ -44,7 +44,7 @@
         <div class="flipbook-viewport">
             <div class="container">
                 <div class="flipbook">
-                    <div style="background-image:url(../IMGS/girl.jpg)"></div>
+                    <div style="background-image:url(../../IMGS/girl.jpg)"></div>
                     <div style="background-image:url(../IMGS/Colour1.png)"></div>
                     <div style="background-image:url(../IMGS/Colour2.png)"></div>
                     <div style="background-image:url(../basic/pages/4.jpg)"></div>
