--- a/HTML/design.html
+++ b/HTML/design.html
@@ -44,11 +44,11 @@
         <div class="flipbook-viewport">
             <div class="container">
                 <div class="flipbook">
-                    <div style="background-image:url(../../IMGS/girl.jpg)"></div>
-                    <div style="background-image:url(../IMGS/Colour1.png)"></div>
-                    <div style="background-image:url(../IMGS/Colour2.png)"></div>
-                    <div style="background-image:url(../basic/pages/4.jpg)"></div>
-                    <div style="background-image:url(../basic/pages/5.jpg)"></div>
+                    <div style="background-image:url(../IMGS/girl.jpg)"></div>
+                    <div style="background-image:url(../IMGS/Folderstructure.png)"></div>
+                    <div style="background-image:url(../IMGS/Wireflow.png)"></div>
+                    <div style="background-image:url(../IMGS/Infostructure.png)"></div>
+                    <div style="background-image:url(../IMGS/Homepg.png)"></div>
                     <div style="background-image:url(../basic/pages/6.jpg)"></div>
                     <div style="background-image:url(../basic/pages/7.jpg)"></div>
                     <div style="background-image:url(../basic/pages/8.jpg)"></div>
