--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <script type="module"> import { initialise } from "./JS/menu.js"
         initialise("Home") </script>
-           <script src="./JS/typewriter.js"></script>
+           <script src="../JS/typewriter.js"></script>
 
         <!--Adding reference for icons fron Font Awesome-->
         <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
@@ -45,8 +45,8 @@
 
         <div class="Text">
             <!--JS script must be in the id div for the text to appear-->
-            <div id="typedtext">
-                <script src="./JS/typewriter.js"></script>
+            <div id="typewriter-text">
+                
             </div>
 
         </div>
