--- a/HTML/adviceslip.html
+++ b/HTML/adviceslip.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="../CSS/adviceslip.css">
+    <script src="../JS/adviceapi.js"></script>
 </head>
 <body>
     <div class="container">
