--- a/HTML/design.html
+++ b/HTML/design.html
@@ -43,7 +43,7 @@
         <div class="flipbook-viewport">
             <div class="container">
                 <div class="flipbook">
-                    <div style="background-image:url(../IMGS/girl.jpg)"></div>
+                    <div style="background-image:url(../IMGS/DJcover.png)"></div>
                     <div style="background-image:url(../IMGS/Folderstructure.png)"></div>
                     <div style="background-image:url(../IMGS/Wireflow.png)"></div>
                     <div style="background-image:url(../IMGS/Infostructure.png)"></div>
