nav bar testing

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      
     <!--JS document linking-->
      <script type="module">
-      import { initialise } from "JS/navigation.js"
+      import { initialise } from "../JS/navigation.js"
       initialise("Home");
       </script>
       <script src="JS/typewriter.js"></script>
@@ -25,7 +25,8 @@
          <!--The code below is a container for all the hyperlink
          that will be shown on my homepage-->
     </nav>
-</header>
+  </header>
+
   <h1>Fefe's Portfolio Website</h1>
   <div id="typewriter-text"></div>
 </body>
