--- a/essays/essay1.html
+++ b/essays/essay1.html
@@ -15,7 +15,7 @@
     <!--JS document linking-->
      <script type="module">
       import { initialise } from "../JS/navigation.js"
-      initialise("Profile");
+      initialise("Essays");
       </script>
 
 </head>
