--- a/portfolio/other.html
+++ b/portfolio/other.html
@@ -16,6 +16,7 @@
          import { initialise } from "../JS/navigation.js"
          initialise("Portfolio");
          </script>
+         <script src="../JS/blogsnav.js"></script>
 
 </head>
 <body>
@@ -36,7 +37,7 @@
         <h1 class="xlarge-font"><b>The App</b></h1>
         <h1 class="large-font" style="color:MediumSeaGreen;"><b>Why buy it?</b></h1>
         <p><span style="font-size:36px">Take photos like a pro.</span> You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <button class="button">Download Application</button>
+        <button onclick="navigateToPage('../portfolio/other/UNIIApp.html')">Read more</button>
       </div>
       <div class="column-33">
           <img src="/w3images/img_app.jpg" width="335" height="471">
@@ -54,7 +55,7 @@
         <h1 class="xlarge-font"><b>Clarity</b></h1>
         <h1 class="large-font" style="color:red;"><b>Pixels, who?</b></h1>
         <p><span style="font-size:24px">A revolution in resolution.</span> Sharp and clear photos with the world's best photo engine, incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-        <button class="button" style="background-color:red">Read More</button>
+        <button onclick="navigateToPage('../portfolio/other/DAweb.html')">Read more</button>
       </div>
     </div>
   </div>
@@ -66,7 +67,7 @@
         <h1 class="xlarge-font"><b>The App</b></h1>
         <h1 class="large-font" style="color:MediumSeaGreen;"><b>Why buy it?</b></h1>
         <p><span style="font-size:36px">Take photos like a pro.</span> You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <button class="button">Download Application</button>
+        <button onclick="navigateToPage('../portfolio/other/bigsisAPI.html')">Read more</button>
       </div>
       <div class="column-33">
           <img src="/w3images/img_app.jpg" width="335" height="471">
