--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -6,42 +6,43 @@
     <meta name="description" content="Fefe's portfolio website">
     <meta name="description" content ="Portfolio">
     <meta name="author" content="Ofentse Magabeane">
-    <title>Portfolio</title>
+    <title>Design</title>
 
-     <!--CSS document linking-->
-     <link rel="stylesheet" href="../CSS/styling.css" />
+    <!-- CSS document linking -->
+    <link rel="stylesheet" href="../CSS/styling.css" />
 
-     <!--JS document linking-->
-     <script type="module">
-         import { initialise } from "../JS/navigation.js"
-         initialise("Portfolio");
-         </script>
-         
+    <!-- JS document linking -->
+    <script type="module">
+        import { initialise } from "../JS/navigation.js";
+        initialise("Portfolio");
+    </script>
 </head>
 <body>
-      <header>
+    <header>
         <nav>
-             <!--The code below is a container for all the hyperlink
-             that will be shown on my homepage-->
+            <!-- The code below is a container for all the hyperlink
+            that will be shown on my homepage -->
         </nav>
     </header>
 
     <h1>Portfolio:</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at dictum massa. Maecenas luctus mollis cursus. Nulla nec odio eu libero finibus tincidunt. Aliquam vitae sem eu leo imperdiet dictum vel quis leo. Praesent elit ipsum, scelerisque a iaculis sed, fermentum vitae nisi. Donec vel fermentum urna. Praesent gravida odio non ex aliquam accumsan. Nullam ac sodales nulla.</p>
 
-    <div class="css cards-design">
+    <div class="cards-design">
         <div class="row">
             <div class="column">
-              <div class="card">
-                <h3>Card 1</h3>
-              </div>
+                <div class="card">
+                    <h3>Card 1</h3>
+                    <a class="blog-link-text" href="../portfolio/games.html">Read More</a>
+                </div>
             </div>
-          
             <div class="column">
-              <div class="card">
-                <h3>Card 2</h3>
-              </div>
+                <div class="card">
+                    <h3>Card 2</h3>
+                    <a class="blog-link-text" href="../portfolio/other.html">Read More</a>
+                </div>
             </div>
+        </div>
     </div>
 </body>
 </html>
