--- a/portfolio/games/resourcegame.html
+++ b/portfolio/games/resourcegame.html
@@ -34,6 +34,19 @@
     </section>
     
     <button id="downloadBtn2">Download Zip 2</button>
-    <script src="/JS/download.js"></script>
+
+     <!-----------------------Footer------------------------------------------->
+     <footer>
+        <div class="footer">
+          <p>Contact:</p>
+            <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
+            <a href=""><i class="fa-regular fa-envelope"></i></a>
+            <a href=""><i class="fa-brands fa-discord"></i></a>
+            <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
+        </div>
+      </footer>
+      
+      <!------------JS Linking---------------------->
+          <script src="/JS/download.js"></script>
 </body>
 </html>
