--- a/design/notes.html
+++ b/design/notes.html
@@ -145,5 +145,15 @@
   <h2>Interaction design and Implementation notes</h2>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at dictum massa. Maecenas luctus mollis cursus. Nulla nec odio eu libero finibus tincidunt. Aliquam vitae sem eu leo imperdiet dictum vel quis leo. Praesent elit ipsum, scelerisque a iaculis sed, fermentum vitae nisi. Donec vel fermentum urna. Praesent gravida odio non ex aliquam accumsan. Nullam ac sodales nulla.</p>
 
+   <!-----------------------Footer------------------------------------------->
+   <footer>
+    <div class="footer">
+      <p>Contact:</p>
+        <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
+        <a href=""><i class="fa-regular fa-envelope"></i></a>
+        <a href=""><i class="fa-brands fa-discord"></i></a>
+        <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
+    </div>
+  </footer>
 </body>
 </html>
