--- a/essays/essay1.html
+++ b/essays/essay1.html
@@ -61,5 +61,16 @@
         <p>Sánchez Chamorro, L., Bongard-Blanchy, K. and Koenig, V., 2023, July. Ethical Tensions in UX Design Practice: Exploring the Fine Line Between Persuasion and Manipulation in Online Interfaces. In Proceedings of the 2023 ACM Designing Interactive Systems Conference (pp. 2408-2422).</p>
         <p>Sridevi, S., 2014. User interface design. International Journal of Computer Science and Information Technology Research, 2(2), pp.415-426.</p>
     </article>
+
+     <!-----------------------Footer------------------------------------------->
+     <footer>
+        <div class="footer">
+          <p>Contact:</p>
+            <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
+            <a href=""><i class="fa-regular fa-envelope"></i></a>
+            <a href=""><i class="fa-brands fa-discord"></i></a>
+            <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
+        </div>
+      </footer>
 </body>
 </html>
