--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       initialise("Home");
       </script>
       <script src="JS/typewriter.js"></script>
+
+      <!----------Linking Font awesome kit-------------------->
+      <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
   
 </head>
 <body>
@@ -28,6 +31,19 @@
   </header>
 
   <h1>Fefe's Portfolio Website</h1>
+  <img src="/profile/profile_images/cover.jpeg" alt="Cover image">
   <div id="typewriter-text"></div>
+
+  <!-----------------------Footer------------------------------------------->
+  <footer>
+    <div class="footer">
+      <p>Contact:</p>
+        <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
+        <a href=""><i class="fa-regular fa-envelope"></i></a>
+        <a href=""><i class="fa-brands fa-discord"></i></a>
+        <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
+    </div>
+  </footer>
+
 </body>
 </html>
