--- a/profile/profile.html
+++ b/profile/profile.html
@@ -53,6 +53,17 @@
         
     </section>
 
+    <!-----------------------Footer------------------------------------------->
+    <footer>
+        <div class="footer">
+          <p>Contact:</p>
+            <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
+            <a href=""><i class="fa-regular fa-envelope"></i></a>
+            <a href=""><i class="fa-brands fa-discord"></i></a>
+            <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
+        </div>
+      </footer>
+
     <!--The 'script' ref is to refeernce the fun dact generator-->
     <script src="../JS/factgenerator.js"></script>
 
