--- a/index.html
+++ b/index.html
@@ -31,17 +31,19 @@
   </header>
 
   <h1>Fefe's Portfolio Website</h1>
-  <img src="/profile/profile_images/cover.jpeg" alt="Cover image">
+  <img src="/profile/profile_images/cover.jpeg" alt="Cover image" class="responsive" width="400" height="200">
   <div id="typewriter-text"></div>
 
   <!-----------------------Footer------------------------------------------->
   <footer>
     <div class="footer">
-      <p>Contact:</p>
+      <p>Where you can find me:</p>
+      <div class="footer-icons">
         <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
         <a href=""><i class="fa-regular fa-envelope"></i></a>
         <a href=""><i class="fa-brands fa-discord"></i></a>
         <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
+      </div>
     </div>
   </footer>
 
