--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </header>
 
   <h1>Fefe's Portfolio Website</h1>
-  <img src="../profile/profile_images/cover.jpeg" alt="Cover image" class="responsive" width="400" height="200">
+  <img src="profile/profile_images/cover.jpeg" alt="Cover image" class="responsive" width="400" height="200">
   <div id="typewriter-text"></div>
 
   <!-----------------------Footer------------------------------------------->
