--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Homepage</title>
 
     <!--CSS document linking-->
-    <link rel="stylesheet" href="CSS/styling.css" />
+    <link rel="stylesheet" href="/CSS/styling.css" />
      
     <!--JS document linking-->
      <script type="module">
-      import { initialise } from "./JS/navigation.js"
+      import { initialise } from "/JS/navigation.js"
       initialise("Home");
       </script>
       <script src="JS/typewriter.js"></script>
