--- a/profile/profile.html
+++ b/profile/profile.html
@@ -17,8 +17,9 @@
         import { initialise } from "../JS/navigation.js"
         initialise("Profile");
         </script>
-        
 
+             <!----------Linking Font awesome kit-------------------->
+      <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -30,7 +31,7 @@
 
     <section>
         <h1>Profile</h1>
-        <img src=""alt= "Image of me" width="350" height="400">
+        <img src="../profile/profile_images/cover.jpeg"alt= "Image of me" class="responsive" width="400" height="200">
 
         <article>
             <div class="">
@@ -49,14 +50,13 @@
 
         <h2>What else about Fefe</h2>
         <p id="fact-text">...</p>
-        <button id="button">Well,I like...</button>
-        
+        <button id="button">Well,I like...</button>  
     </section>
 
     <!-----------------------Footer------------------------------------------->
     <footer>
         <div class="footer">
-          <p>Contact:</p>
+          <p>Where you can find me:</p>
             <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
             <a href=""><i class="fa-regular fa-envelope"></i></a>
             <a href=""><i class="fa-brands fa-discord"></i></a>
