--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -16,6 +16,10 @@
         import { initialise } from "../JS/navigation.js";
         initialise("Portfolio");
     </script>
+
+         <!----------Linking Font awesome kit-------------------->
+         <script src="https://kit.fontawesome.com/58493d5990.js" crossorigin="anonymous"></script>
+         
 </head>
 <body>
     <header>
