--- a/profile/profile.html
+++ b/profile/profile.html
@@ -29,12 +29,11 @@
         </nav>
     </header>
 
-    <section>
         <h1>Profile</h1>
         <img src="../profile/profile_images/cover.jpeg"alt= "Image of me" class="responsive" width="400" height="200">
 
         <article>
-            <div class="">
+            <div class="description">
                <p>Heyyy there!! I’m Ofentse Magabeane but I like to go by Fefe</p>
                <p> I am a game designer, and web developer- I eat, breathe, and sleep UI/UX. </p> 
                <p>In short, I like making things look pretty but also functional. </p>
@@ -44,26 +43,16 @@
         <br>
         
         <h2>Am I Qualified?</h2>
-        <p>Not yet but I am working towards that 😊. Ofentse is completing her BA Digital Arts degree at the University of Witwatersrand and will be graduating in 2024.</p>
+         <p>Not yet but I am working towards that 😊. </p>
+         </p>Ofentse is completing her BA Digital Arts degree at the University of Witwatersrand and will be graduating in 2024.</p>
 
         <!--------------------------Random fact generator---------------------------->
 
         <h2>What else about Fefe</h2>
         <p id="fact-text">...</p>
         <button id="button">Well,I like...</button>  
-    </section>
 
-    <!-----------------------Footer------------------------------------------->
-    <footer>
-        <div class="footer">
-          <p>Where you can find me:</p>
-            <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
-            <a href=""><i class="fa-regular fa-envelope"></i></a>
-            <a href=""><i class="fa-brands fa-discord"></i></a>
-            <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
-        </div>
-      </footer>
-
+        
     <!--The 'script' ref is to refeernce the fun dact generator-->
     <script src="../JS/factgenerator.js"></script>
 
