--- a/profile/profile.html
+++ b/profile/profile.html
@@ -10,7 +10,7 @@
 
     <!--CSS document linking-->
     <link rel="stylesheet" href="../CSS/styling.css" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="../CSS/profile.css" />
 
     <!--JS document linking-->
     <script type="module">
@@ -52,7 +52,7 @@
         <p id="fact-text">...</p>
         <button id="button">Well,I like...</button>  
 
-        
+
     <!--The 'script' ref is to refeernce the fun dact generator-->
     <script src="../JS/factgenerator.js"></script>
 
