update profile page styling

--- a/profile/profile.html
+++ b/profile/profile.html
@@ -30,7 +30,7 @@
     </header>
 
         <h1>Profile</h1>
-        <img src="../profile/profile_images/cover.jpeg"alt= "Image of me" class="responsive" width="400" height="200">
+        <img src="../profile/profile_images/cover.jpeg"alt= "Image of me" class="responsive" width="200" height="200">
 
         <article>
             <div class="description">
@@ -42,17 +42,31 @@
         </article>
         <br>
         
-        <h2>Am I Qualified?</h2>
-         <p>Not yet but I am working towards that 😊. </p>
-         </p>Ofentse is completing her BA Digital Arts degree at the University of Witwatersrand and will be graduating in 2024.</p>
+        <h3>Am I Qualified?</h3>
+        <div class="qualification-text">
+          <p>Not yet but I am working towards that 😊. </p>
+          </p>Ofentse is completing her BA Digital Arts degree at the University of Witwatersrand and will be graduating in 2024.</p>
+        </div> 
 
         <!--------------------------Random fact generator---------------------------->
 
         <h2>What else about Fefe</h2>
         <p id="fact-text">...</p>
-        <button id="button">Well,I like...</button>  
+        <button id="button">Well,I like</button> 
 
-
+        <!-----------------------Footer------------------------------------------->
+  <footer>
+    <div class="footer">
+      <p>Where you can find me:</p>
+      <div class="footer-icons">
+        <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
+        <a href=""><i class="fa-regular fa-envelope"></i></a>
+        <a href=""><i class="fa-brands fa-discord"></i></a>
+        <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
+      </div>
+    </div>
+  </footer>
+  
     <!--The 'script' ref is to refeernce the fun dact generator-->
     <script src="../JS/factgenerator.js"></script>
 
