update portfolio main styling

--- a/portfolio/portfolio.html
+++ b/portfolio/portfolio.html
@@ -9,6 +9,7 @@
     <title>Design</title>
 
     <!-- CSS document linking -->
+    <link rel="stylesheet" href="../CSS/normalize.css" />
     <link rel="stylesheet" href="../CSS/styling.css" />
 
     <!-- JS document linking -->
@@ -30,20 +31,22 @@
     </header>
 
     <h1>Portfolio:</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at dictum massa. Maecenas luctus mollis cursus. Nulla nec odio eu libero finibus tincidunt. Aliquam vitae sem eu leo imperdiet dictum vel quis leo. Praesent elit ipsum, scelerisque a iaculis sed, fermentum vitae nisi. Donec vel fermentum urna. Praesent gravida odio non ex aliquam accumsan. Nullam ac sodales nulla.</p>
+    <p>I’ve worked on a couple of projects during my studies- from game prototypes to interactive stories, written stories, app demons and concepts, and websites. From working with software such as Unity, Inky, Twine and various programming languages these are some of the projects I have produced and my proudest work.</p>
 
     <div class="cards-design">
         <div class="row">
             <div class="column">
                 <div class="card">
-                    <h3>Card 1</h3>
-                    <a class="blog-link-text" href="../portfolio/games.html">Read More</a>
+                    <h3>Games prototypes</h3>
+                    <img src="" alt="" class="responsive" width="400" height="200">
+                    <a class="blog-link-text" href="../portfolio/games.html">Expolre</a>
                 </div>
             </div>
             <div class="column">
                 <div class="card">
-                    <h3>Card 2</h3>
-                    <a class="blog-link-text" href="../portfolio/other.html">Read More</a>
+                    <h3>Additional Work</h3>
+                    <img src="" alt="" class="responsive" width="400" height="200">
+                    <a class="blog-link-text" href="../portfolio/other.html">Explore</a>
                 </div>
             </div>
         </div>
@@ -52,11 +55,13 @@
     <!-----------------------Footer------------------------------------------->
     <footer>
         <div class="footer">
-          <p>Contact:</p>
+          <p>Where you can find me:</p>
+          <div class="footer-icons">
             <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
             <a href=""><i class="fa-regular fa-envelope"></i></a>
             <a href=""><i class="fa-brands fa-discord"></i></a>
             <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
+          </div> 
         </div>
       </footer>
 </body>
