--- a/profile/profile.html
+++ b/profile/profile.html
@@ -9,6 +9,7 @@
     <title>Profile</title>
 
     <!--CSS document linking-->
+    <link rel="stylesheet" href="../CSS/normalize.css" />
     <link rel="stylesheet" href="../CSS/styling.css" />
     <link rel="stylesheet" href="../CSS/profile.css" />
 
@@ -66,7 +67,7 @@
       </div>
     </div>
   </footer>
-  
+
     <!--The 'script' ref is to refeernce the fun dact generator-->
     <script src="../JS/factgenerator.js"></script>
 
