--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Homepage</title>
 
     <!--CSS document linking-->
+    <link rel="stylesheet" href="CSS/normalize.css" />
     <link rel="stylesheet" href="CSS/styling.css" />
      
     <!--JS document linking-->
