--- a/portfolio/games.html
+++ b/portfolio/games.html
@@ -46,7 +46,7 @@
   </div>
   
   <!-------------------- Resource Game Section---------------------------->
-  <div class="container" style="background-color:#f1f1f1">
+  <div class="container" >
     <div class="row">
       <div class="column-33">
         <img src="/w3images/app5.jpg" alt="App" width="335" height="471">
@@ -59,17 +59,6 @@
       </div>
     </div>
   </div>
-
-   <!-----------------------Footer------------------------------------------->
-   <footer>
-    <div class="footer">
-      <p>Contact:</p>
-        <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
-        <a href=""><i class="fa-regular fa-envelope"></i></a>
-        <a href=""><i class="fa-brands fa-discord"></i></a>
-        <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
-    </div>
-  </footer>
   
 </body>
 </html>
