--- a/portfolio/other.html
+++ b/portfolio/other.html
@@ -27,34 +27,33 @@
         </nav>
     </header>
 
-    <h1>Portfolio:Other</h1>
+    <h1>Portfolio: Additional Work</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at dictum massa. Maecenas luctus mollis cursus. Nulla nec odio eu libero finibus tincidunt. Aliquam vitae sem eu leo imperdiet dictum vel quis leo. Praesent elit ipsum, scelerisque a iaculis sed, fermentum vitae nisi. Donec vel fermentum urna. Praesent gravida odio non ex aliquam accumsan. Nullam ac sodales nulla.</p>
 
+<div class="content-container">
     <!---------------------UNII App Section------------------------>
 <div class="container">
     <div class="row">
       <div class="column-66">
-        <h1 class="xlarge-font"><b>The App</b></h1>
-        <h1 class="large-font" style="color:MediumSeaGreen;"><b>Why buy it?</b></h1>
-        <p><span style="font-size:36px">Take photos like a pro.</span> You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h1 class="xlarge-font"><b>UNII App</b></h1>
+        <p>A mobile app designed by students for students to help aid students with everyday mundane tasks. The app is intended to cater mainly to Wit’s students.</p>
         <button onclick="navigateToPage('../portfolio/other/UNIIApp.html')">Read more</button>
       </div>
       <div class="column-33">
-          <img src="/w3images/img_app.jpg" width="335" height="471">
+          <img src="https://img.freepik.com/free-vector/new-modern-realistic-front-view-black-iphone-mockup-isolated-white-mobile-template-vector_90220-957.jpg?size=338&ext=jpg&ga=GA1.1.1141335507.1717718400&semt=ais_user" width="335" height="471">
       </div>
     </div>
   </div>
   
   <!-------------------- Internet Art Web Section---------------------------->
-  <div class="container" style="background-color:#f1f1f1">
+  <div class="container">
     <div class="row">
       <div class="column-33">
-        <img src="/w3images/app5.jpg" alt="App" width="335" height="471">
+        <img src="../portfolio/portfolio_images/DAWeb1.png" alt="App" width="700" height="800">
       </div>
       <div class="column-66">
-        <h1 class="xlarge-font"><b>Clarity</b></h1>
-        <h1 class="large-font" style="color:red;"><b>Pixels, who?</b></h1>
-        <p><span style="font-size:24px">A revolution in resolution.</span> Sharp and clear photos with the world's best photo engine, incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <h1 class="xlarge-font"><b>Internet Art Website</b></h1>
+        <p></p> Sharp and clear photos with the world's best photo engine, incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         <button onclick="navigateToPage('../portfolio/other/DAweb.html')">Read more</button>
       </div>
     </div>
@@ -64,27 +63,16 @@
 <div class="container">
     <div class="row">
       <div class="column-66">
-        <h1 class="xlarge-font"><b>The App</b></h1>
-        <h1 class="large-font" style="color:MediumSeaGreen;"><b>Why buy it?</b></h1>
-        <p><span style="font-size:36px">Take photos like a pro.</span> You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h1 class="xlarge-font"><b>Big sis API</b></h1>
+        <p>Take photos like a pro. You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <button onclick="navigateToPage('../portfolio/other/bigsisAPI.html')">Read more</button>
       </div>
       <div class="column-33">
-          <img src="/w3images/img_app.jpg" width="335" height="471">
+          <img src="https://image.lexica.art/md2_webp/e9fbe8b7-2775-455d-8505-99136872ba17" width="335" height="471">
       </div>
     </div>
   </div>
-
-   <!-----------------------Footer------------------------------------------->
-   <footer>
-    <div class="footer">
-      <p>Contact:</p>
-        <a href="https://github.com/Fefeswork?tab=repositories"><i class="fa-brands fa-github"></i></a>
-        <a href=""><i class="fa-regular fa-envelope"></i></a>
-        <a href=""><i class="fa-brands fa-discord"></i></a>
-        <a href="https://itch.io/profile/fefe-magabeane"><i class="fa-brands fa-itch-io"></i></a>
-    </div>
-  </footer>
+</div>
   
 </body>
 </html>
