--- a/essays/essays.html
+++ b/essays/essays.html
@@ -28,21 +28,18 @@
     <h1>Essays:</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at dictum massa. Maecenas luctus mollis cursus. Nulla nec odio eu libero finibus tincidunt. Aliquam vitae sem eu leo imperdiet dictum vel quis leo. Praesent elit ipsum, scelerisque a iaculis sed, fermentum vitae nisi. Donec vel fermentum urna. Praesent gravida odio non ex aliquam accumsan. Nullam ac sodales nulla.</p>
 
-    <div class="cards-design">
-        <div class="row">
-            <div class="column">
-                <div class="card">
-                    <h3>Card 1</h3>
-                    <a class="blog-link-text" href="../essays/essay1.html">Read More</a>
-                </div>
-            </div>
-            <div class="column">
-                <div class="card">
-                    <h3>Card 2</h3>
-                    <a class="blog-link-text" href="../essays/essay2.html">Read More</a>
-                </div>
-            </div>
+    <div class="card-container">
+        <div class="card">
+            <h2>Essay 1: UI/UX Analysis</h2>
+            <img src="https://images.ctfassets.net/wp1lcwdav1p1/31dUrsGyucK0UNmJEQUqj3/3c57d917e84f6500ee2ec54e8760b854/UX_vs_UI.png?w=1500&q=60" alt="Image 1">
+            <a class="blog-link-text" href="../essays/essay2.html">Read</a>
         </div>
+        <div class="card">
+            <h2>Essay 2: Digital Colonialism</h2>
+            <img src="https://divulgingdystopia.files.wordpress.com/2020/12/screenshot-184.png?w=1490" alt="image 2">
+            <a class="blog-link-text" href="../essays/essay2.html">Read</a>
+        </div>
+        <!-- Add more cards as needed -->
     </div>
 
      <!-----------------------Footer------------------------------------------->
