--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
      
     <!--JS document linking-->
      <script type="module">
-      import { initialise } from "JS/navigation.js"
+      import { initialise } from "../JS/navigation.js"
       initialise("Home");
       </script>
       <script src="JS/typewriter.js"></script>
