--- a/portfolio/games.html
+++ b/portfolio/games.html
@@ -30,35 +30,34 @@
     <h1>Portfolio:Games</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque at dictum massa. Maecenas luctus mollis cursus. Nulla nec odio eu libero finibus tincidunt. Aliquam vitae sem eu leo imperdiet dictum vel quis leo. Praesent elit ipsum, scelerisque a iaculis sed, fermentum vitae nisi. Donec vel fermentum urna. Praesent gravida odio non ex aliquam accumsan. Nullam ac sodales nulla.</p>
 
+    <div class="content-container">
     <!---------------------Sushi Go Section------------------------>
 <div class="container">
     <div class="row">
       <div class="column-66">
-        <h1 class="xlarge-font"><b>The App</b></h1>
-        <h1 class="large-font" style="color:rgba(233, 107, 172, 0.712);"><b>Why buy it?</b></h1>
-        <p><span style="font-size:36px">Take photos like a pro.</span> You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h1 class="xlarge-font"><b>Sushi Go!</b></h1>
+        <p> You should buy this app because lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <button onclick="navigateToPage('../portfolio/games/sushigo.html')">Read more</button>
       </div>
       <div class="column-33">
-          <img src="/w3images/img_app.jpg" width="335" height="471">
+          <img src="../portfolio/portfolio_images/SG1.png" width="800" height="800">
       </div>
     </div>
   </div>
   
   <!-------------------- Resource Game Section---------------------------->
-  <div class="container" >
+  <div class="container">
     <div class="row">
       <div class="column-33">
-        <img src="/w3images/app5.jpg" alt="App" width="335" height="471">
+        <img src="../portfolio/portfolio_images/RM1.png" alt="App" width="800" height="800">
       </div>
       <div class="column-66">
-        <h1 class="xlarge-font"><b>Clarity</b></h1>
-        <h1 class="large-font" style="color:rgb(226, 137, 199);"><b>Pixels, who?</b></h1>
-        <p><span style="font-size:24px">A revolution in resolution.</span> Sharp and clear photos with the world's best photo engine, incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+        <h1 class="xlarge-font"><b>Resource Management Game</b></h1>
+        <p>Sharp and clear photos with the world's best photo engine, incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
         <button onclick="navigateToPage('../portfolio/games/resourcegame.html')">Read more</button>
       </div>
     </div>
   </div>
-  
+ </div>
 </body>
 </html>
